# c-icap-server

./: Makefile.am  aserver.c  body.c  common.h  configure.ac  decode.c  header.c  http_auth.c  info.c  log.c  module.c  net_io.c  proc_threads_queues.c  service.c  txt_format.c  util.c  winnt_server.c
include/: c-icap.h  ci_threads.h  debug.h  net_io.h
modules/: Makefile.am  dnsbl_tables.c  shared_cache.c
os/win32/: dlib.c  net_io.c  utilfunc.c
services/echo/: Makefile.am
services/ex-206/: Makefile.am
tests/: Makefile.am  test_allocators.c  test_arrays.c  test_body.c  test_cache.c  test_ops.c  test_tables.c
utils/: c-icap-client.c  c-icap-stretch.c
